# mai-informatics

./: README.md
Lab1-2/: Протокол.txt  Сценарий.pages
Lab10-11/: head.txt  head10.txt  lab10.c  main.c  protocol10.txt  protocol10_2.txt  protocol11.txt  test.txt  test1.txt  test2.txt  test3.txt  test4.txt
Lab12/: head.txt  kek.c  main.c  main.c~  main.exec  protocol.txt  protocol.txt~  Варианты к Лаб 12.doc
Lab13/: LAB13_.C  head.txt  lab13.c  protocol.txt  set.h  test.txt  test2.txt
Lab13/clion/: CMakeLists.txt  main.c  set.h
Lab14/: head.txt  head.txt~  lab14.c  protocol.txt
Lab15/: head.txt  lab15.c  protocol.txt  test1.txt  test2.txt  test3.txt
Lab21/: generate.sh  head.txt  protocol.txt  script.sh
Lab22/: file.dvi  file.ps  file.tex  head.txt  report.txt
Lab24/: CMakeLists.txt  head.txt  main.cpp  prog.txt  protocol.txt
Lab26/: CMakeLists.txt  Makefile  Makefile2  Makefile_save  head.txt  main  main.c  make_protocol.txt  protocol.txt  stack_dynamic.c  stack_dynamic.h  stack_static.c  stack_static.h
Lab3/: Протокол.txt  Сценарий.pages
Lab5/: 43.tu  43_no_com.tu  43_test.tu  Protocol.txt  original_protocol.txt  Сценарий.pages
Lab6/: 13.jdtp  13_v2.jdt  tests.txt
Lab7/: main.nam
Lab8/: head.txt  main.c  main.exec  protocol.txt  protocol.txt~
Lab9/: code.txt  head9.txt  main.c  main.exec  protocol.txt
